--- a/app/src/main/res/layout/item_feed_text_only.xml
+++ b/app/src/main/res/layout/item_feed_text_only.xml
@@ -7,6 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             android:paddingTop="17dp"
             android:paddingBottom="20dp"
             android:paddingHorizontal="15dp">
