--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/top_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -31,6 +32,19 @@
         android:layout_marginTop="-14dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_logo" />
+
+    <!-- 커뮤니티 이름 -->
+    <TextView
+        android:id="@+id/tv_community_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_gravity="center"
+        android:text="커뮤니티명"
+        android:textColor="@color/gray2"
+        style="@style/TextAppearance.App.TitleLarge"
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <!-- 알람 버튼 -->
     <ImageView
