--- a/app/src/main/res/drawable/ic_alarm.xml
+++ b/app/src/main/res/drawable/ic_alarm.xml
@@ -1,12 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="26dp"
-    android:height="22dp"
-    android:viewportWidth="26"
-    android:viewportHeight="22">
+    android:width="28dp"
+    android:height="26dp"
+    android:viewportWidth="28"
+    android:viewportHeight="26">
   <path
-      android:pathData="M19.018,1C20.606,1.002 22.127,1.63 23.248,2.743C24.369,3.856 24.998,5.364 25,6.936C25,9.917 23.101,13.235 18.924,16.789C17.082,18.345 15.098,19.727 13,20.92C10.902,19.726 8.917,18.346 7.075,16.789H7.076C2.899,13.235 1,9.917 1,6.936C1.002,5.364 1.631,3.856 2.752,2.743C3.873,1.63 5.394,1.002 6.981,1C9.241,1 11.125,2.059 12.143,3.752C12.323,4.053 12.649,4.236 13,4.236C13.351,4.236 13.677,4.053 13.857,3.752C14.875,2.06 16.758,1 19.018,1Z"
+      android:pathData="M24.636,11.775V22.061C24.636,22.841 24.281,23.588 23.647,24.139C23.014,24.69 22.155,25 21.26,25H4.449C3.556,25 2.7,24.692 2.067,24.144C1.434,23.596 1.077,22.851 1.073,22.074L1,7.38C0.996,6.601 1.348,5.853 1.978,5.299C2.608,4.746 3.465,4.432 4.36,4.428H16.195"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#D7D9DE"
-      android:strokeColor="#4D505C"/>
+      android:fillColor="#00000000"
+      android:strokeColor="#747886"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M23.514,7.973C25.439,7.973 27,6.412 27,4.487C27,2.561 25.439,1 23.514,1C21.588,1 20.027,2.561 20.027,4.487C20.027,6.412 21.588,7.973 23.514,7.973Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="#747886"
+      android:strokeLineCap="round"/>
 </vector>
