[Feat] FeedDetail & Comment

--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -5,25 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:padding="12dp">
+    android:paddingHorizontal="12dp">
 
-    <!-- 연결선 -->
+    <ImageView
+        android:id="@+id/iv_comment_line"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="-30dp"
+        android:scaleType="fitStart"
+        android:src="@drawable/ic_comment_line"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <View
         android:id="@+id/view_line"
         android:layout_width="2dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:background="@color/gray3"
+        android:layout_marginStart="19dp"
+        android:background="@color/gray4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
 
     <!-- 더보기 이미지 -->
     <ImageView
         android:id="@+id/iv_overflow"
         android:layout_width="18dp"
         android:layout_height="18dp"
-        android:layout_marginTop="-5dp"
+        android:layout_marginTop="13dp"
         android:src="@drawable/ic_feed_overflow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,11 +46,10 @@
         android:id="@+id/iv_profile"
         android:layout_width="33dp"
         android:layout_height="33dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="29dp"
         android:src="@drawable/ic_no_profile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/view_line" />
+        app:layout_constraintStart_toEndOf="@+id/iv_comment_line"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 이름 -->
     <TextView
@@ -65,8 +76,25 @@
         app:layout_constraintStart_toStartOf="@id/tv_username"
         app:layout_constraintTop_toBottomOf="@id/tv_username"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_more"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="2dp" />
+
+    <!-- 더보기 버튼 -->
+    <TextView
+        android:id="@+id/tv_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="더 보기"
+        android:textColor="@color/point_blue"
+        android:fontFamily="@font/roboto_semibold"
+        android:textSize="12sp"
+        android:lineHeight="16sp"
+        android:letterSpacing="0.0333"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/tv_content"
+        app:layout_constraintStart_toStartOf="@id/tv_content"
+        android:layout_marginTop="4dp"/>
 
     <!-- 날짜 표시 -->
     <TextView
@@ -77,9 +105,9 @@
         android:textColor="@color/gray3"
         style="@style/TextAppearance.App.LabelMedium"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="48dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_more"/>
 
     <!-- 피드백 -->
     <LinearLayout
@@ -91,6 +119,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:paddingBottom="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_date">
