--- a/app/src/main/res/layout/fragment_feed_detail.xml
+++ b/app/src/main/res/layout/fragment_feed_detail.xml
@@ -3,15 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:paddingTop="90dp"
-        android:id="@+id/container_feed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_comments"
+        android:id="@+id/rv_feed_detail"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
 </LinearLayout>
