--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/top_bar"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,6 +15,17 @@
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         android:src="@drawable/bg_top_bar" />
+
+    <!-- 나가기 버튼 -->
+    <ImageView
+        android:id="@+id/iv_close"
+        android:layout_width="17dp"
+        android:layout_height="14dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="6dp"
+        android:src="@drawable/ic_top_bar_close"
+        android:visibility="gone" />
+
 
     <!-- 프로필 버튼 -->
     <ImageView
