--- a/app/src/main/res/layout/item_feed_image2.xml
+++ b/app/src/main/res/layout/item_feed_image2.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
+        android:background="@color/white"
         android:paddingTop="17dp"
         android:paddingBottom="20dp"
         android:paddingHorizontal="15dp">
@@ -138,6 +138,18 @@
                 android:background="@drawable/ic_feed_no_img" />
         </LinearLayout>
 
+        <!-- 인용 피드 컨테이너 -->
+        <FrameLayout
+            android:id="@+id/layout_quote"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            app:layout_constraintTop_toBottomOf="@id/image_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
         <!-- 날짜 표시 -->
         <TextView
@@ -150,7 +162,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="45dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_container"/>
+            app:layout_constraintTop_toBottomOf="@+id/layout_quote"/>
 
         <!-- 피드백 -->
         <LinearLayout
