--- a/app/src/main/res/layout/item_feed_text_only.xml
+++ b/app/src/main/res/layout/item_feed_text_only.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
+            android:background="@color/white"
             android:paddingTop="17dp"
             android:paddingBottom="20dp"
             android:paddingHorizontal="15dp">
@@ -103,6 +103,19 @@
                 app:layout_constraintStart_toStartOf="@id/tv_content"
                 android:layout_marginTop="4dp"/>
 
+
+            <!-- 인용 피드 컨테이너 -->
+            <FrameLayout
+                android:id="@+id/layout_quote"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="14dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_more"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
             <!-- 날짜 표시 -->
             <TextView
                 android:id="@+id/tv_date"
@@ -114,7 +127,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="45dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_more"/>
+                app:layout_constraintTop_toBottomOf="@+id/layout_quote"/>
 
             <!-- 피드백 -->
             <LinearLayout
