메모리북 기능 구현

--- a/app/src/main/res/drawable/ic_home_extend.xml
+++ b/app/src/main/res/drawable/ic_home_extend.xml
@@ -1,4 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="15dp"
     android:height="15dp"
     android:viewportWidth="15"
