--- a/app/src/main/res/layout/fragment_cm_memory.xml
+++ b/app/src/main/res/layout/fragment_cm_memory.xml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CmMemoryFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <!-- Scroll 전체 영역 -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/memoryScrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <!-- 수정 버튼 -->
+            <TextView
+                android:id="@+id/memoryEditButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="수정"
+                android:textSize="14sp"
+                android:textColor="#A277FF"
+                android:layout_gravity="end"
+                android:padding="4dp"
+                android:clickable="true"
+                android:focusable="true" />
+
+            <!-- 목차 영역 -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/memoryTocRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="0dp"
+                android:nestedScrollingEnabled="false"
+                android:layout_marginTop="16dp"
+                android:overScrollMode="never" />
+
+            <!-- 콘텐츠 영역 -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/memoryContentRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="0dp"
+                android:nestedScrollingEnabled="false"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
+                android:overScrollMode="never" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
