--- a/app/src/main/res/layout/item_feed_text_only.xml
+++ b/app/src/main/res/layout/item_feed_text_only.xml
@@ -249,6 +249,7 @@
 
     <!-- 구분선 (윤곽선) -->
     <ImageView
+        android:id="@+id/iv_div_line"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_feed_divider"
