--- a/app/src/main/res/layout/fragment_cm_home.xml
+++ b/app/src/main/res/layout/fragment_cm_home.xml
@@ -19,13 +19,13 @@
         android:id="@+id/btn_cm_home_edit"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:src="@drawable/ic_home_edit"
         android:layout_margin="12dp"
+        android:src="@drawable/ic_home_edit"
         app:backgroundTint="@color/gray1"
         app:ensureMinTouchTargetSize="false"
-        app:useCompatPadding="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:shapeAppearanceOverlay="@style/FabShape"
         app:tint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:useCompatPadding="false" />
 </androidx.constraintlayout.widget.ConstraintLayout>
