--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -76,9 +76,9 @@
                 android:id="@+id/tv_content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="7dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="10dp"
                 android:textColor="@color/black"
                 android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
                 style="@style/TextAppearance.App.BodySmall"
@@ -103,6 +103,39 @@
                 app:layout_constraintStart_toStartOf="@id/tv_content"
                 android:layout_marginTop="4dp"/>
 
+            <!-- 이미지 컨테이너 -->
+            <FrameLayout
+                android:id="@+id/layout_image_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tv_more"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="45dp"
+                android:layout_marginEnd="10dp">
+
+                <!-- 이미지 레이아웃 1~4 -->
+                <include
+                    android:id="@+id/layout_image1"
+                    layout="@layout/item_feed_image1"
+                    android:visibility="gone" />
+
+                <include
+                    android:id="@+id/layout_image2"
+                    layout="@layout/item_feed_image2"
+                    android:visibility="gone" />
+
+                <include
+                    android:id="@+id/layout_image3"
+                    layout="@layout/item_feed_image3"
+                    android:visibility="gone" />
+
+                <include
+                    android:id="@+id/layout_image4"
+                    layout="@layout/item_feed_image4"
+                    android:visibility="gone" />
+            </FrameLayout>
+
 
             <!-- 인용 피드 컨테이너 -->
             <FrameLayout
@@ -110,9 +143,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="14dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_more"
+                android:layout_marginStart="45dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_image_container"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -136,9 +170,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_date">
@@ -227,13 +262,13 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/iv_bookmark"
+                        android:id="@+id/iv_quote"
                         android:layout_width="18dp"
                         android:layout_height="18dp"
-                        android:src="@drawable/ic_feed_bookmark" />
+                        android:src="@drawable/ic_feed_quote" />
 
                     <TextView
-                        android:id="@+id/tv_bookmark"
+                        android:id="@+id/tv_quote"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="6dp"
