--- a/app/src/main/res/layout/item_feed_interacrion.xml
+++ b/app/src/main/res/layout/item_feed_interacrion.xml
@@ -13,8 +13,6 @@
             android:paddingBottom="10dp"
             android:paddingHorizontal="5dp">
 
-
-
             <!-- 프로필 이미지 -->
             <ImageView
                 android:id="@+id/iv_profile"
@@ -59,9 +57,9 @@
                 android:id="@+id/tv_content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="26dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="7dp"
-                android:layout_marginEnd="55dp"
+                android:layout_marginEnd="25dp"
                 android:textColor="@color/black"
                 android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
                 style="@style/TextAppearance.App.BodySmall"
@@ -86,16 +84,43 @@
                 app:layout_constraintStart_toStartOf="@id/tv_content"
                 android:layout_marginTop="4dp"/>
 
+            <!-- 이미지 포함 -->
+            <LinearLayout
+                android:id="@+id/layout_image_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@+id/tv_content"
+                app:layout_constraintTop_toBottomOf="@id/tv_more">
+
+                <ImageView
+                    android:id="@+id/iv_image_icon"
+                    android:layout_width="11dp"
+                    android:layout_height="11dp"
+                    android:layout_marginEnd="2dp"
+                    android:src="@drawable/ic_include_img" />
+
+                <TextView
+                    android:id="@+id/tv_image_info"
+                    style="@style/TextAppearance.App.LabelTiny"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="사진 포함"
+                    android:textColor="@color/point_pink" />
+            </LinearLayout>
 
             <!-- 인용 피드 컨테이너 -->
             <FrameLayout
                 android:id="@+id/layout_quote"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="45dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginTop="14dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_more"
+                app:layout_constraintTop_toBottomOf="@id/layout_image_info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
