--- a/app/src/main/res/layout/item_feed_interacrion_quote.xml
+++ b/app/src/main/res/layout/item_feed_interacrion_quote.xml
@@ -3,34 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="5dp"
-    android:paddingBottom="15dp"
-    android:background="@drawable/bg_feed_quote"
-    android:layout_marginHorizontal="40dp"
-    android:paddingHorizontal="13dp">
-
-    <!-- 커뮤니티 이미지 -->
-    <ImageView
-        android:id="@+id/iv_community"
-        android:scaleX="0.9"
-        android:scaleY="0.9"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_no_community"
-        android:layout_marginTop="10dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    android:padding="8dp"
+    android:background="@drawable/bg_feed_quote">
 
     <!-- 프로필 이미지 -->
     <ImageView
         android:id="@+id/iv_profile"
         android:scaleX="0.9"
         android:scaleY="0.9"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+
         android:scaleType="centerCrop"
         android:src="@drawable/ic_no_profile"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,30 +22,29 @@
     <!-- 유저 이름 -->
     <TextView
         android:id="@+id/tv_username"
+        style="@style/TextAppearance.App.LabelMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="유저1"
+        android:layout_marginStart="5dp"
         android:textColor="@color/black"
-        style="@style/TextAppearance.App.LabelMedium"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/iv_community"
-        app:layout_constraintTop_toTopOf="@id/iv_community"
-        android:layout_marginStart="17dp"/>
+        app:layout_constraintStart_toEndOf="@+id/iv_profile"
+        app:layout_constraintTop_toTopOf="@+id/iv_profile" />
 
     <!-- 본문 텍스트 -->
     <TextView
         android:id="@+id/tv_content"
+        style="@style/TextAppearance.App.BodySmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="30dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="10dp"
         android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
-        style="@style/TextAppearance.App.BodySmall"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_profile"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_username" />
 
     <!-- 더보기 버튼 -->
@@ -81,4 +63,33 @@
         app:layout_constraintStart_toStartOf="@id/tv_content"
         android:layout_marginTop="4dp"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- 이미지 포함 -->
+    <LinearLayout
+        android:id="@+id/layout_image_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="10dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/tv_more"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_image_icon"
+            android:layout_width="11dp"
+            android:layout_height="11dp"
+            android:layout_marginEnd="2dp"
+            android:src="@drawable/ic_include_img" />
+
+        <TextView
+            android:id="@+id/tv_image_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사진 포함"
+            android:textColor="@color/point_pink"
+            style="@style/TextAppearance.App.LabelTiny" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
