--- a/app/src/main/res/layout/item_feed_quote.xml
+++ b/app/src/main/res/layout/item_feed_quote.xml
@@ -3,11 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="5dp"
-    android:paddingBottom="15dp"
+    android:paddingBottom="7dp"
     android:background="@drawable/bg_feed_quote"
-    android:layout_marginHorizontal="40dp"
-    android:paddingHorizontal="13dp">
+    android:paddingHorizontal="7dp">
 
     <!-- 커뮤니티 이미지 -->
     <ImageView
@@ -18,6 +16,7 @@
         android:layout_height="30dp"
         android:src="@drawable/ic_no_community"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -29,7 +28,7 @@
         android:scaleY="0.9"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="13dp"
         android:layout_marginTop="22dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_no_profile"
@@ -55,8 +54,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="10dp"
         android:textColor="@color/black"
         android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
         style="@style/TextAppearance.App.BodySmall"
@@ -81,19 +80,37 @@
         app:layout_constraintStart_toStartOf="@id/tv_content"
         android:layout_marginTop="4dp"/>
 
-    <!-- 이미지 -->
-    <ImageView
-        android:id="@+id/iv_image1"
+    <!-- 이미지 컨테이너 -->
+    <FrameLayout
+        android:id="@+id/layout_image_container"
         android:layout_width="0dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="8dp"
-        android:scaleType="centerCrop"
-        android:background="@drawable/ic_feed_no_img"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv_more"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="45dp"/>
+        android:layout_marginTop="8dp">
+
+        <!-- 이미지 레이아웃 1~4 -->
+        <include
+            android:id="@+id/layout_image1"
+            layout="@layout/item_feed_image1"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/layout_image2"
+            layout="@layout/item_feed_image2"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/layout_image3"
+            layout="@layout/item_feed_image3"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/layout_image4"
+            layout="@layout/item_feed_image4"
+            android:visibility="gone" />
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
