--- a/app/src/main/res/layout/item_question_feed.xml
+++ b/app/src/main/res/layout/item_question_feed.xml
@@ -47,6 +47,7 @@
         android:text="내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용 #어쩌구 #저쩌구"
         android:textAppearance="@style/TextAppearance.App.LabelSmall"
         android:textColor="@color/black"
+        android:minLines="2"
         app:layout_constraintTop_toBottomOf="@id/titleTimeRow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivThumbnail"
@@ -84,9 +85,9 @@
 
             <ImageView
                 android:id="@+id/ivLike"
-                android:layout_width="13dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_question_like" />
+                android:layout_width="16dp"
+                android:layout_height="13dp"
+                android:src="@drawable/ic_question_like_unselected" />
 
             <TextView
                 android:id="@+id/tvLikeCount"
@@ -103,13 +104,12 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginStart="8dp">
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/ivComment"
-                android:layout_width="13dp"
-                android:layout_height="13dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:src="@drawable/ic_question_comment" />
 
             <TextView
