--- a/app/src/main/res/layout/menu_popup_sort.xml
+++ b/app/src/main/res/layout/menu_popup_sort.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/bg_popup_menu_community"
+    android:background="@drawable/bg_popup_menu_overflow"
     android:layout_width="155dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/btn_community"
+        android:id="@+id/btn_sort_popular"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="5dp"
-        android:paddingHorizontal="10dp"
+        android:paddingHorizontal="15dp"
         android:gravity="center_vertical">
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:src="@drawable/ic_popup_community" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="'ABC' 바로 가기"
+            android:text="인기 순"
             style="@style/TextAppearance.App.LabelMedium"
-            android:layout_marginStart="8dp"
             android:textColor="@color/gray2" />
     </LinearLayout>
 
@@ -32,23 +28,42 @@
         android:background="@color/gray4" />
 
     <LinearLayout
-        android:id="@+id/btn_user_profile"
+        android:id="@+id/btn_sort_recent"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="5dp"
-        android:paddingHorizontal="10dp"
+        android:paddingHorizontal="15dp"
         android:gravity="center_vertical">
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:src="@drawable/ic_popup_profile" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="\@abcde 바로 가기"
+            android:text="최신 순"
             style="@style/TextAppearance.App.LabelMedium"
-            android:layout_marginStart="8dp"
+
+            android:textColor="@color/gray2" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray4" />
+
+    <LinearLayout
+        android:id="@+id/btn_sort_old"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="15dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="오래된 순"
+            style="@style/TextAppearance.App.LabelMedium"
             android:textColor="@color/gray2" />
     </LinearLayout>
 
