--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -40,7 +40,7 @@
 
     <!-- 정렬 편지 -->
     <LinearLayout
-        android:id="@+id/sortEditButton"
+        android:id="@+id/btnSortEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -76,7 +76,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sortEditButton">
+        app:layout_constraintTop_toBottomOf="@+id/btnSortEdit">
 
         <!-- 피드 리스트 -->
         <androidx.recyclerview.widget.RecyclerView
