feat: 답변 완료 표시 & 이미지 있는 질문 디테일 화면 구현

--- a/app/src/main/res/layout/item_question_feed.xml
+++ b/app/src/main/res/layout/item_question_feed.xml
@@ -119,7 +119,7 @@
                 android:layout_marginStart="10dp"
                 android:text="100"
                 android:textAppearance="@style/TextAppearance.App.LabelTiny"
-                android:textColor="@color/gray2" />
+                android:textColor="@color/point_green" />
         </LinearLayout>
 
     </LinearLayout>
