--- a/app/src/main/res/layout/item_question_comment.xml
+++ b/app/src/main/res/layout/item_question_comment.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="질문 제목"
+        android:text="사용자 이름"
         android:textColor="@color/black"
         android:layout_marginStart="5dp"
         android:layout_marginVertical="5dp"
@@ -39,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="5dp"
         android:text="내용내용내용내용내용내용내용내용내용내용?내용내용내용내용내용내용내용내용내용내용?내용내용내용내용내용내용내용내용내용내용"
         android:textAppearance="@style/TextAppearance.App.BodyMedium"
         android:textColor="@color/black"
@@ -113,7 +113,7 @@
                 android:layout_marginStart="10dp"
                 android:text="100"
                 android:textAppearance="@style/TextAppearance.App.LabelTiny"
-                android:textColor="@color/gray2" />
+                android:textColor="@color/point_green" />
         </LinearLayout>
 
     </LinearLayout>
