--- a/app/src/main/res/layout/item_question_detail.xml
+++ b/app/src/main/res/layout/item_question_detail.xml
@@ -6,8 +6,21 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:background="@drawable/bg_question_detail"
-    android:paddingHorizontal="15dp"
+    android:paddingStart="15dp"
+    android:paddingEnd="20dp"
     android:paddingVertical="10dp">
+
+    <!-- 익명 질문 -->
+    <TextView
+        android:id="@+id/tvAnonymous"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="익명 질문"
+        android:textAppearance="@style/TextAppearance.App.LabelTiny"
+        android:textColor="@color/point_purple"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Q 아이콘 -->
     <ImageView
@@ -25,26 +38,57 @@
         android:id="@+id/tvDetailTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="질문 제목"
-        android:textColor="@color/black"
         android:layout_marginStart="5dp"
+        android:text="질문 제목"
         android:textAppearance="@style/TextAppearance.App.TitleLarge"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@id/ivDetailQ"
         app:layout_constraintStart_toEndOf="@id/ivDetailQ"
-        app:layout_constraintBottom_toBottomOf="@id/ivDetailQ"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvAnonymous" />
+
     <!-- 질문 내용 + 해시태그 -->
     <TextView
         android:id="@+id/tvDetailContent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="60dp"
         android:text="내용내용내용내용내용내용내용내용내용내용?내용내용내용내용내용내용내용내용내용내용?내용내용내용내용내용내용내용내용내용내용?"
         android:textAppearance="@style/TextAppearance.App.BodyMedium"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDetailTitle" />
+
+    <!-- 이미지 뷰페이저 -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vpImages"
+        android:layout_width="0dp"
+        android:layout_height="367dp"
+        android:layout_marginTop="5dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        app:layout_constraintTop_toBottomOf="@id/tvDetailContent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/imageIndicatorContainer"
+        android:layout_width="0dp"
+        android:layout_height="3dp"
+        android:layout_marginTop="5dp"
+        android:background="#F1F1F1"
+        app:layout_constraintTop_toBottomOf="@id/vpImages"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 현재 페이지를 나타내는 인디케이터 -->
+        <View
+            android:id="@+id/imageIndicator"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/gray5" />
+    </FrameLayout>
 
     <!-- 날짜 표시 -->
     <TextView
@@ -56,7 +100,7 @@
         android:textColor="@color/gray3"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDetailContent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageIndicatorContainer" />
 
     <LinearLayout
         android:id="@+id/feedbackRow"
@@ -112,7 +156,7 @@
                 android:layout_marginStart="10dp"
                 android:text="100"
                 android:textAppearance="@style/TextAppearance.App.LabelTiny"
-                android:textColor="@color/gray2" />
+                android:textColor="@color/point_green" />
         </LinearLayout>
 
     </LinearLayout>
