--- a/app/src/main/res/drawable/ic_feed_divider.xml
+++ b/app/src/main/res/drawable/ic_feed_divider.xml
@@ -11,6 +11,6 @@
         android:pathData="M0,15C0,6.72 6.72,0 15,0H397C405.28,0 412,6.72 412,15V18C412,26.28 405.28,33 397,33H15C6.72,33 0,26.28 0,18V15Z"/>
     <path
         android:pathData="M0,0H412H0ZM412,18C412,27.39 404.39,35 395,35H17C7.61,35 0,27.39 0,18C0,25.18 6.72,31 15,31H397C405.28,31 412,25.18 412,18ZM0,33V0V33ZM412,0V33V0Z"
-        android:fillColor="#A4A8B7"/>
+        android:fillColor="#D7D9DE"/>
   </group>
 </vector>
