--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="-40dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/bg_top_bar" />
+        android:src="@drawable/bg_topbar" />
 
     <!-- 나가기 버튼 -->
     <ImageView
