--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 android:clipToPadding="false"
-                android:overScrollMode="never"
+                android:overScrollMode="always"
                 tools:listitem="@layout/item_feed" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
